--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="loader.rami.com.myprojectplaces">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-        <uses-permission android:name="android.permission.INTERNET" />
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -30,6 +35,10 @@
 
         <service
             android:name=".MyIntentService"
+            android:exported="false"></service>
+
+        <service
+            android:name=".NearMeSearch"
             android:exported="false"></service>
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA9tE4wl3-W2SYBM9zw7sbUQfTt6xvEHw0"/>
     </application>
